--- a/index.html
+++ b/index.html
@@ -1,11 +1,94 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Music Tutoring - Chris Bates</title>
-  </head>
-  <body>
-    <h1>Welcome to my Music Tutoring site!</h1>
-    <p>I offer singing, guitar, and songwriting lessons in Auckland and online.</p>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, songwriting, and musicality lessons." />
+  <meta name="theme-color" content="#0b0f13" />
+
+  <title>Chris Bates — Music Tutoring</title>
+
+  <link rel="stylesheet" href="css/style.css?v=1" />
+</head>
+<body>
+  <!-- HERO -->
+  <section class="hero" style="background-image:url('img/hero.jpg');">
+    <div class="overlay">
+      <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
+      <p class="subtitle">Singing • Guitar • Songwriting • General Music</p>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section class="about">
+    <div class="content">
+      <h2>About</h2>
+      <p>
+        Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar,
+        singing and songwriting. Alongside releasing his own music, Chris helps aspiring musicians
+        develop their skills, creativity, and confidence — blending the perspective of a working
+        artist with the clarity of a dedicated tutor.
+      </p>
+    </div>
+  </section>
+
+  <!-- LESSONS -->
+  <section class="lessons">
+    <div class="content">
+      <h2>Lessons</h2>
+      <div class="grid">
+        <div class="card">
+          <img src="img/singing.jpg" alt="Singing lessons">
+          <h3>Singing</h3>
+          <p>Develop range, technique, and stage confidence.</p>
+        </div>
+        <div class="card">
+          <img src="img/guitar.jpg" alt="Guitar lessons">
+          <h3>Guitar</h3>
+          <p>Acoustic or electric, rhythm to lead, tailored to you.</p>
+        </div>
+        <div class="card">
+          <img src="img/songwriting.jpg" alt="Songwriting lessons">
+          <h3>Songwriting</h3>
+          <p>Lyrics, hooks, and structure — from ideas to polished songs.</p>
+        </div>
+        <div class="card">
+          <img src="img/general.jpg" alt="General music lessons">
+          <h3>General Music</h3>
+          <p>Music theory, creativity, and overall musicianship.</p>
+        </div>
+      </div>
+      <p class="muted" style="margin-top:20px;">Contact me for rates and availability.</p>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="contact">
+    <div class="content">
+      <h2>Contact</h2>
+      <p>Email me directly: <a class="email" href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
+      <form class="contact-form">
+        <input type="text" name="name" placeholder="Your name" required>
+        <input type="email" name="email" placeholder="Your email" required>
+        <textarea name="message" rows="5" placeholder="Your message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="content">
+      <nav class="links" aria-label="Social and music links">
+        <a href="https://instagram.com/itschrisbates" target="_blank">Instagram</a>
+        <a href="https://www.tiktok.com/@itschrisbates" target="_blank">TikTok</a>
+        <a href="https://www.facebook.com/itschrisbates" target="_blank">Facebook</a>
+        <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank">Spotify</a>
+        <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank">Apple Music</a>
+        <a href="https://www.youtube.com/chrisbates" target="_blank">YouTube</a>
+      </nav>
+      <p class="muted">Looking for my music? <a href="https://itschrisbates.github.io" target="_blank">Visit my main site →</a></p>
+    </div>
+  </footer>
+</body>
 </html>
