--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, songwriting, and musicality lessons." />
+  <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, and songwriting lessons." />
   <meta name="theme-color" content="#0b0f13" />
 
   <title>Chris Bates — Music Tutoring</title>
 
-  <link rel="stylesheet" href="css/style.css?v=1" />
+  <link rel="stylesheet" href="css/style.css?v=2" />
 </head>
 <body>
   <!-- HERO -->
   <section class="hero" style="background-image:url('img/hero.jpg');">
     <div class="overlay">
       <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
-      <p class="subtitle">Singing • Guitar • Songwriting • General Music</p>
+      <p class="subtitle">Singing • Guitar • Songwriting</p>
     </div>
   </section>
 
@@ -33,32 +33,17 @@
   </section>
 
   <!-- LESSONS -->
-  <section class="lessons">
-    <div class="content">
-      <h2>Lessons</h2>
-      <div class="grid">
-        <div class="card">
-          <img src="img/singing.jpg" alt="Singing lessons">
-          <h3>Singing</h3>
-          <p>Develop range, technique, and stage confidence.</p>
-        </div>
-        <div class="card">
-          <img src="img/guitar.jpg" alt="Guitar lessons">
-          <h3>Guitar</h3>
-          <p>Acoustic or electric, rhythm to lead, tailored to you.</p>
-        </div>
-        <div class="card">
-          <img src="img/songwriting.jpg" alt="Songwriting lessons">
-          <h3>Songwriting</h3>
-          <p>Lyrics, hooks, and structure — from ideas to polished songs.</p>
-        </div>
-        <div class="card">
-          <img src="img/general.jpg" alt="General music lessons">
-          <h3>General Music</h3>
-          <p>Music theory, creativity, and overall musicianship.</p>
-        </div>
+  <section class="lessons" style="background-image:url('img/lessons-bg.jpg');">
+    <div class="overlay">
+      <div class="content">
+        <h2>Lessons</h2>
+        <ul class="lesson-list">
+          <li>🎤 Singing</li>
+          <li>🎸 Guitar</li>
+          <li>✍️ Songwriting</li>
+        </ul>
+        <p class="muted" style="margin-top:20px;">Contact me for rates and availability.</p>
       </div>
-      <p class="muted" style="margin-top:20px;">Contact me for rates and availability.</p>
     </div>
   </section>
 
