--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, and songwriting lessons." />
   <meta name="theme-color" content="#0b0f13" />
-
   <title>Chris Bates — Music Tutoring</title>
-
-  <link rel="stylesheet" href="css/style.css?v=2" />
+  <link rel="stylesheet" href="css/style.css?v=3" />
 </head>
 <body>
   <!-- HERO -->
-  <section class="hero" style="background-image:url('img/hero.jpg');">
+  <section class="hero" style="background-image:url('img/hero.webp');">
     <div class="overlay">
       <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
       <p class="subtitle">Singing • Guitar • Songwriting</p>
@@ -32,8 +30,8 @@
     </div>
   </section>
 
-  <!-- LESSONS -->
-  <section class="lessons" style="background-image:url('img/lessons-bg.jpg');">
+  <!-- LESSONS (single immersive background) -->
+  <section class="lessons" style="background-image:url('img/performing.webp');">
     <div class="overlay">
       <div class="content">
         <h2>Lessons</h2>
@@ -65,14 +63,14 @@
   <footer>
     <div class="content">
       <nav class="links" aria-label="Social and music links">
-        <a href="https://instagram.com/itschrisbates" target="_blank">Instagram</a>
-        <a href="https://www.tiktok.com/@itschrisbates" target="_blank">TikTok</a>
-        <a href="https://www.facebook.com/itschrisbates" target="_blank">Facebook</a>
-        <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank">Spotify</a>
-        <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank">Apple Music</a>
-        <a href="https://www.youtube.com/chrisbates" target="_blank">YouTube</a>
+        <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a>
+        <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a>
+        <a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a>
+        <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a>
+        <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a>
+        <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a>
       </nav>
-      <p class="muted">Looking for my music? <a href="https://itschrisbates.github.io" target="_blank">Visit my main site →</a></p>
+      <p class="muted">Looking for my music? <a href="https://itschrisbates.github.io" target="_blank" rel="noopener">Visit my main site →</a></p>
     </div>
   </footer>
 </body>
