--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, and songwriting lessons." />
   <meta name="theme-color" content="#0b0f13" />
   <title>Chris Bates — Music Tutoring</title>
-  <link rel="stylesheet" href="css/style.css?v=3" />
+  <link rel="stylesheet" href="css/style.css?v=4" />
 </head>
 <body>
   <!-- HERO -->
@@ -30,7 +30,7 @@
     </div>
   </section>
 
-  <!-- LESSONS (single immersive background) -->
+  <!-- LESSONS -->
   <section class="lessons" style="background-image:url('img/performing.webp');">
     <div class="overlay">
       <div class="content">
