--- a/index.html
+++ b/index.html
@@ -1,77 +1,73 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Chris Bates — Music Tutoring. Singing, guitar, and songwriting lessons." />
-  <meta name="theme-color" content="#0b0f13" />
-  <title>Chris Bates — Music Tutoring</title>
-  <link rel="stylesheet" href="css/style.css?v=4" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chris Bates Music Tutoring</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- HERO -->
-  <section class="hero" style="background-image:url('img/hero.webp');">
-    <div class="overlay">
-      <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
-      <p class="subtitle">Singing • Guitar • Songwriting</p>
-    </div>
+  <!-- Hero Image -->
+  <section class="hero"></section>
+
+  <!-- Hero Text Bar -->
+  <section class="hero-text">
+    <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
+    <p class="subtitle">Singing · Guitar · Songwriting</p>
   </section>
 
-  <!-- ABOUT -->
+  <!-- About Section -->
   <section class="about">
-    <div class="content">
-      <h2>About</h2>
-      <p>
-        Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar,
-        singing and songwriting. Alongside releasing his own music, Chris helps aspiring musicians
-        develop their skills, creativity, and confidence — blending the perspective of a working
-        artist with the clarity of a dedicated tutor.
-      </p>
-    </div>
+    <h2>About Chris</h2>
+    <p>
+      Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar, singing and songwriting. 
+      Alongside releasing his own music, Chris helps aspiring musicians develop their skills, creativity, and confidence — 
+      blending the perspective of a working artist with the clarity of a dedicated tutor.
+    </p>
   </section>
 
-  <!-- LESSONS -->
-  <section class="lessons" style="background-image:url('img/performing.webp');">
-    <div class="overlay">
-      <div class="content">
-        <h2>Lessons</h2>
-        <ul class="lesson-list">
-          <li>🎤 Singing</li>
-          <li>🎸 Guitar</li>
-          <li>✍️ Songwriting</li>
-        </ul>
-        <p class="muted" style="margin-top:20px;">Contact me for rates and availability.</p>
-      </div>
-    </div>
+  <!-- Lessons Image -->
+  <section class="lessons"></section>
+
+  <!-- Lessons Text Bar -->
+  <section class="lessons-text">
+    <h2>Lessons Offered</h2>
+    <ul class="lesson-list">
+      <li>🎤 Singing</li>
+      <li>🎸 Guitar</li>
+      <li>✍️ Songwriting</li>
+    </ul>
+    <p>Contact me for rates and availability.</p>
   </section>
 
-  <!-- CONTACT -->
+  <!-- Contact -->
   <section class="contact">
-    <div class="content">
-      <h2>Contact</h2>
-      <p>Email me directly: <a class="email" href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
-      <form class="contact-form">
-        <input type="text" name="name" placeholder="Your name" required>
-        <input type="email" name="email" placeholder="Your email" required>
-        <textarea name="message" rows="5" placeholder="Your message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </div>
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message"></textarea>
+      <button type="submit">Send</button>
+    </form>
   </section>
 
-  <!-- FOOTER -->
+  <!-- Socials & Music -->
   <footer>
-    <div class="content">
-      <nav class="links" aria-label="Social and music links">
-        <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a>
-        <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a>
-        <a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a>
-        <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a>
-        <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a>
-        <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a>
-      </nav>
-      <p class="muted">Looking for my music? <a href="https://itschrisbates.github.io" target="_blank" rel="noopener">Visit my main site →</a></p>
-    </div>
+    <h2>Find Me Online</h2>
+    <p>
+      <a href="https://instagram.com/itschrisbates">Instagram</a> |
+      <a href="https://www.tiktok.com/@itschrisbates">TikTok</a> |
+      <a href="https://www.facebook.com/itschrisbates">Facebook</a>
+    </p>
+    <p>
+      <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ">Spotify</a> |
+      <a href="https://music.apple.com/nz/artist/chris-bates/1483001799">Apple Music</a> |
+      <a href="https://www.youtube.com/chrisbates">YouTube</a>
+    </p>
+    <p class="cousin-link">
+      Also check out my <a href="YOUR-MUSIC-SITE-LINK">music website</a>
+    </p>
   </footer>
 </body>
 </html>
