--- a/index.html
+++ b/index.html
@@ -1,73 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chris Bates Music Tutoring</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chris Bates - Music Tutoring</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Hero Image -->
-  <section class="hero"></section>
 
-  <!-- Hero Text Bar -->
-  <section class="hero-text">
-    <h1 class="title">1:1 Music Tutoring in Auckland & Online</h1>
-    <p class="subtitle">Singing · Guitar · Songwriting</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-bar">
+      <h1>1:1 Music Tutoring in Auckland & Online</h1>
+      <p>Singing · Guitar · Songwriting</p>
+    </div>
   </section>
 
   <!-- About Section -->
-  <section class="about">
+  <section id="about">
     <h2>About Chris</h2>
     <p>
-      Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar, singing and songwriting. 
-      Alongside releasing his own music, Chris helps aspiring musicians develop their skills, creativity, and confidence — 
-      blending the perspective of a working artist with the clarity of a dedicated tutor.
+      Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar,
+      singing and songwriting. Alongside releasing his own music, Chris helps aspiring musicians
+      develop their skills, creativity, and confidence — blending the perspective of a working artist
+      with the clarity of a dedicated tutor.
     </p>
   </section>
 
-  <!-- Lessons Image -->
-  <section class="lessons"></section>
-
-  <!-- Lessons Text Bar -->
-  <section class="lessons-text">
-    <h2>Lessons Offered</h2>
-    <ul class="lesson-list">
-      <li>🎤 Singing</li>
-      <li>🎸 Guitar</li>
-      <li>✍️ Songwriting</li>
-    </ul>
-    <p>Contact me for rates and availability.</p>
+  <!-- Lessons Section -->
+  <section class="lessons" id="lessons">
+    <div class="overlay">
+      <h2>Lessons Offered</h2>
+      <ul>
+        <li>🎤 Singing</li>
+        <li>🎸 Guitar</li>
+        <li>✍️ Songwriting</li>
+      </ul>
+      <p>Contact me for rates and availability.</p>
+    </div>
   </section>
 
-  <!-- Contact -->
-  <section class="contact">
+  <!-- Contact Section -->
+  <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
     <form>
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message"></textarea>
+      <input type="text" name="name" placeholder="Your Name">
+      <input type="email" name="email" placeholder="Your Email">
+      <textarea name="message" placeholder="Your Message"></textarea>
       <button type="submit">Send</button>
     </form>
   </section>
 
-  <!-- Socials & Music -->
-  <footer>
+  <!-- Links Section -->
+  <section id="links">
     <h2>Find Me Online</h2>
     <p>
-      <a href="https://instagram.com/itschrisbates">Instagram</a> |
-      <a href="https://www.tiktok.com/@itschrisbates">TikTok</a> |
-      <a href="https://www.facebook.com/itschrisbates">Facebook</a>
+      <a href="#">Instagram</a> | <a href="#">TikTok</a> | <a href="#">Facebook</a><br>
+      <a href="#">Spotify</a> | <a href="#">Apple Music</a> | <a href="#">YouTube</a><br>
+      Also check out my <a href="#">music website</a>
     </p>
-    <p>
-      <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ">Spotify</a> |
-      <a href="https://music.apple.com/nz/artist/chris-bates/1483001799">Apple Music</a> |
-      <a href="https://www.youtube.com/chrisbates">YouTube</a>
-    </p>
-    <p class="cousin-link">
-      Also check out my <a href="YOUR-MUSIC-SITE-LINK">music website</a>
-    </p>
-  </footer>
+  </section>
+
 </body>
 </html>
