--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="hero-bar">
       <h1>1:1 Music Tutoring in Auckland & Online</h1>
       <p>Singing · Guitar · Songwriting</p>
+      <a href="#contact" class="cta">Book a Lesson</a>
     </div>
   </section>
 
@@ -36,7 +37,7 @@
         <li>🎸 Guitar</li>
         <li>✍️ Songwriting</li>
       </ul>
-      <p>Contact me for rates and availability.</p>
+      <a href="#contact" class="cta">Contact Me</a>
     </div>
   </section>
 
@@ -45,9 +46,9 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
     <form>
-      <input type="text" name="name" placeholder="Your Name">
-      <input type="email" name="email" placeholder="Your Email">
-      <textarea name="message" placeholder="Your Message"></textarea>
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
   </section>
