--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chris Bates - Music Tutoring</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Chris Bates — Music Tutoring</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-bar">
+  <!-- HERO (full-bleed image with top-left tab) -->
+  <section class="section-bleed hero">
+    <div class="tab tab-hero">
       <h1>1:1 Music Tutoring in Auckland & Online</h1>
-      <p>Singing · Guitar · Songwriting</p>
+      <p class="sub">Singing · Guitar · Songwriting</p>
       <a href="#contact" class="cta">Book a Lesson</a>
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about">
+  <!-- ABOUT (content width) -->
+  <section id="about" class="section-content">
     <h2>About Chris</h2>
     <p>
       Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar,
@@ -28,37 +28,37 @@
     </p>
   </section>
 
-  <!-- Lessons Section -->
-  <section class="lessons" id="lessons">
-    <div class="overlay">
+  <!-- LESSONS (full-bleed image with top-left tab) -->
+  <section id="lessons" class="section-bleed lessons">
+    <div class="tab tab-lessons">
       <h2>Lessons Offered</h2>
-      <ul>
-        <li>🎤 Singing</li>
-        <li>🎸 Guitar</li>
-        <li>✍️ Songwriting</li>
+      <ul class="list">
+        <li>🎤&nbsp;Singing</li>
+        <li>🎸&nbsp;Guitar</li>
+        <li>✍️&nbsp;Songwriting</li>
       </ul>
-      <a href="#contact" class="cta">Contact Me</a>
+      <a href="#contact" class="cta cta-light">Contact Me</a>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
+  <!-- CONTACT -->
+  <section id="contact" class="section-content">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
     <form>
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send</button>
     </form>
   </section>
 
-  <!-- Links Section -->
-  <section id="links">
+  <!-- LINKS -->
+  <section id="links" class="section-content">
     <h2>Find Me Online</h2>
     <p>
-      <a href="#">Instagram</a> | <a href="#">TikTok</a> | <a href="#">Facebook</a><br>
-      <a href="#">Spotify</a> | <a href="#">Apple Music</a> | <a href="#">YouTube</a><br>
+      <a href="#">Instagram</a> · <a href="#">TikTok</a> · <a href="#">Facebook</a><br />
+      <a href="#">Spotify</a> · <a href="#">Apple Music</a> · <a href="#">YouTube</a><br />
       Also check out my <a href="#">music website</a>
     </p>
   </section>
