--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 
-  <!-- HERO (full-bleed image with top-left tab) -->
-  <section class="section-bleed hero">
-    <div class="tab tab-hero">
+  <!-- HERO (full-bleed image with top tab) -->
+  <section class="hero">
+    <div class="hero-tab">
       <h1>1:1 Music Tutoring in Auckland & Online</h1>
-      <p class="sub">Singing · Guitar · Songwriting</p>
+      <p>Singing · Guitar · Songwriting</p>
       <a href="#contact" class="cta">Book a Lesson</a>
     </div>
   </section>
 
-  <!-- ABOUT (content width) -->
+  <!-- ABOUT -->
   <section id="about" class="section-content">
     <h2>About Chris</h2>
     <p>
@@ -26,19 +26,6 @@
       develop their skills, creativity, and confidence — blending the perspective of a working artist
       with the clarity of a dedicated tutor.
     </p>
-  </section>
-
-  <!-- LESSONS (full-bleed image with top-left tab) -->
-  <section id="lessons" class="section-bleed lessons">
-    <div class="tab tab-lessons">
-      <h2>Lessons Offered</h2>
-      <ul class="list">
-        <li>🎤&nbsp;Singing</li>
-        <li>🎸&nbsp;Guitar</li>
-        <li>✍️&nbsp;Songwriting</li>
-      </ul>
-      <a href="#contact" class="cta cta-light">Contact Me</a>
-    </div>
   </section>
 
   <!-- CONTACT -->
