--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-  <!-- HERO (full-bleed image with top tab) -->
+  <!-- HERO with top strip -->
   <section class="hero">
-    <div class="hero-tab">
+    <div class="hero-strip">
       <h1>1:1 Music Tutoring in Auckland & Online</h1>
       <p>Singing · Guitar · Songwriting</p>
       <a href="#contact" class="cta">Book a Lesson</a>
@@ -27,6 +27,9 @@
       with the clarity of a dedicated tutor.
     </p>
   </section>
+
+  <!-- FULL-BLEED IMAGE BREAK -->
+  <section class="image-break"></section>
 
   <!-- CONTACT -->
   <section id="contact" class="section-content">
