--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 
-  <!-- HERO with top strip -->
+  <!-- HERO with centered top strip -->
   <section class="hero">
     <div class="hero-strip">
       <h1>1:1 Music Tutoring in Auckland & Online</h1>
       <p>Singing · Guitar · Songwriting</p>
-      <a href="#contact" class="cta">Book a Lesson</a>
     </div>
   </section>
 
@@ -47,9 +46,13 @@
   <section id="links" class="section-content">
     <h2>Find Me Online</h2>
     <p>
-      <a href="#">Instagram</a> · <a href="#">TikTok</a> · <a href="#">Facebook</a><br />
-      <a href="#">Spotify</a> · <a href="#">Apple Music</a> · <a href="#">YouTube</a><br />
-      Also check out my <a href="#">music website</a>
+      <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a> ·
+      <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a> ·
+      <a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a><br />
+      <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a> ·
+      <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a> ·
+      <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a><br />
+      Also check out my <a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">music website</a>
     </p>
   </section>
 
