--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
 </head>
 <body>
 
-  <!-- HERO with centered top strip -->
-  <section class="hero">
-    <div class="hero-strip">
-      <h1>1:1 Music Tutoring in Auckland & Online</h1>
-      <p>Singing · Guitar · Songwriting</p>
-    </div>
+  <!-- TOP BANNER (separate black section) -->
+  <section class="top-banner">
+    <h1>Chris Bates Music Tutoring</h1>
   </section>
+
+  <!-- HERO (clean full-bleed image, no overlay) -->
+  <section class="hero"></section>
 
   <!-- ABOUT -->
   <section id="about" class="section-content">
     <h2>About Chris</h2>
     <p>
-      Chris Bates is an Auckland-based musician and recording artist, offering lessons in guitar,
-      singing and songwriting. Alongside releasing his own music, Chris helps aspiring musicians
-      develop their skills, creativity, and confidence — blending the perspective of a working artist
-      with the clarity of a dedicated tutor.
+      Chris Bates is an Auckland-based musician and recording artist offering one-to-one lessons in
+      guitar, singing, and songwriting. Lessons are available on Auckland’s North Shore or online — focused on
+      building skill, creativity, and confidence with the perspective of a working artist and a dedicated tutor.
     </p>
   </section>
 
