--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- TOP BANNER (separate black section) -->
+  <!-- TOP BANNER (matches section backgrounds, not sticky) -->
   <section class="top-banner">
     <h1>Chris Bates Music Tutoring</h1>
   </section>
@@ -21,38 +21,36 @@
     <h2>About Chris</h2>
     <p>
       Chris Bates is an Auckland-based musician and recording artist offering one-to-one lessons in
-      guitar, singing, and songwriting. Lessons are available on Auckland’s North Shore or online — focused on
-      building skill, creativity, and confidence with the perspective of a working artist and a dedicated tutor.
+      guitar, singing, and songwriting. Lessons are available on Auckland’s North Shore or online —
+      focused on building skill, creativity, and confidence with the perspective of a working artist
+      and a dedicated tutor.
     </p>
   </section>
 
   <!-- FULL-BLEED IMAGE BREAK -->
   <section class="image-break"></section>
 
-  <!-- CONTACT -->
+  <!-- CONTACT (email only) -->
   <section id="contact" class="section-content">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
-    <form>
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
+    <p>
+      📩 You can reach me at
+      <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a>
+    </p>
   </section>
 
-  <!-- LINKS -->
+  <!-- FIND ME ONLINE -->
   <section id="links" class="section-content">
     <h2>Find Me Online</h2>
-    <p>
-      <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a> ·
-      <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a> ·
-      <a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a><br />
-      <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a> ·
-      <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a> ·
-      <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a><br />
-      Also check out my <a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">music website</a>
-    </p>
+    <ul>
+      <li><a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+      <li><a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener noreferrer">TikTok</a></li>
+      <li><a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener noreferrer">Facebook</a></li>
+      <li><a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener noreferrer">Spotify</a></li>
+      <li><a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener noreferrer">Apple Music</a></li>
+      <li><a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+      <li><a href="https://chrisbates.co.nz/" target="_blank" rel="noopener noreferrer">Website</a></li>
+    </ul>
   </section>
 
 </body>
