--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-  <!-- TOP BANNER (matches section backgrounds, not sticky) -->
+  <!-- TOP BANNER -->
   <section class="top-banner">
     <h1>Chris Bates Music Tutoring</h1>
   </section>
 
-  <!-- HERO (clean full-bleed image, no overlay) -->
+  <!-- HERO (full-bleed image) -->
   <section class="hero"></section>
 
   <!-- ABOUT -->
@@ -27,29 +27,26 @@
     </p>
   </section>
 
-  <!-- FULL-BLEED IMAGE BREAK -->
+  <!-- IMAGE BREAK -->
   <section class="image-break"></section>
 
   <!-- CONTACT (email only) -->
-  <section id="contact" class="section-content">
+  <section id="contact" class="section-content tight-bottom">
     <h2>Contact</h2>
-    <p>
-      📩 You can reach me at
-      <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a>
-    </p>
+    <p>📧 You can reach me at <a href="mailto:itschrisbates@gmail.com">itschrisbates@gmail.com</a></p>
   </section>
 
   <!-- FIND ME ONLINE -->
-  <section id="links" class="section-content">
+  <section id="links" class="section-content tight-top">
     <h2>Find Me Online</h2>
-    <ul>
-      <li><a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-      <li><a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener noreferrer">TikTok</a></li>
-      <li><a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-      <li><a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener noreferrer">Spotify</a></li>
-      <li><a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener noreferrer">Apple Music</a></li>
-      <li><a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-      <li><a href="https://chrisbates.co.nz/" target="_blank" rel="noopener noreferrer">Website</a></li>
+    <ul class="social-row">
+      <li>📸 <a href="https://instagram.com/itschrisbates" target="_blank" rel="noopener">Instagram</a></li>
+      <li>🎵 <a href="https://www.tiktok.com/@itschrisbates" target="_blank" rel="noopener">TikTok</a></li>
+      <li>👍 <a href="https://www.facebook.com/itschrisbates" target="_blank" rel="noopener">Facebook</a></li>
+      <li>🎧 <a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a></li>
+      <li>🍎 <a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a></li>
+      <li>▶️ <a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a></li>
+      <li>🌐 <a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Website</a></li>
     </ul>
   </section>
 
