--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section id="about" class="section-content">
     <h2>About Chris</h2>
     <p>
-      Chris Bates is an Auckland-based musician and recording artist offering one-to-one lessons in
+      Chris Bates (BMus) is an Auckland-based musician and recording artist offering one-to-one lessons in
       guitar, singing, and songwriting. Lessons are available on Auckland’s North Shore or online —
       focused on building skill, creativity, and confidence with the perspective of a working artist
       and a dedicated tutor.
