--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <li><a href="https://open.spotify.com/artist/1wMxoWB76tKp8gOJDGRxxJ" target="_blank" rel="noopener">Spotify</a></li>
       <li><a href="https://music.apple.com/nz/artist/chris-bates/1483001799" target="_blank" rel="noopener">Apple Music</a></li>
       <li><a href="https://www.youtube.com/chrisbates" target="_blank" rel="noopener">YouTube</a></li>
-      <li><a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Website</a></li>
+      <li><a href="https://chrisbates.co.nz/" target="_blank" rel="noopener">Artist Website</a></li>
     </ul>
   </section>
 
