--- a/index.html
+++ b/index.html
@@ -16,18 +16,55 @@
   <!-- HERO (full-bleed image) -->
   <section class="hero"></section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section-content">
-    <h2>About Chris</h2>
+  <!-- BIO -->
+  <section id="bio" class="section-content">
+    <h2>Bio</h2>
     <p>
-      Chris Bates (BMus) is an Auckland-based musician and recording artist offering one-to-one lessons in
-      guitar, singing, and songwriting. Lessons are available on Auckland’s North Shore or online —
-      focused on building skill, creativity, and confidence with the perspective of a working artist
-      and a dedicated tutor.
+      Hey! I’m Chris Bates (BMus), and I teach singing, guitar and songwriting, based on the North Shore.
+      As a child I learned the violin for a number of years, and at around age 13 I began to sing, play guitar and write songs.
+      Over the last few years I’ve released music online as an artist, and performed around Auckland.
+    </p>
+    <p>
+      I’ve tutored music for the last 5 or so years, both younger and older. It’s a great pleasure to help guide aspiring musicians on their journey.
+      All ages are welcome!
     </p>
   </section>
 
-  <!-- IMAGE BREAK -->
+  <!-- GREEN PHOTO (full-bleed, same format as other photos) -->
+  <section class="image-break green"></section>
+
+  <!-- TEACHING INFO -->
+  <section id="teaching-info" class="section-content">
+    <h2>Teaching Info</h2>
+    <div class="teaching-grid">
+      <article class="card" tabindex="0">
+        <h3>Singers</h3>
+        <p>
+          For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
+          and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
+          breath control, placement, vocal execution, etc.
+        </p>
+      </article>
+      <article class="card" tabindex="0">
+        <h3>Guitarists</h3>
+        <p>
+          For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
+          and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
+          and how you can start to hear them without needing chord charts.
+        </p>
+      </article>
+      <article class="card" tabindex="0">
+        <h3>Songwriters</h3>
+        <p>
+          For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
+          and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
+          Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
+        </p>
+      </article>
+    </div>
+  </section>
+
+  <!-- EXISTING IMAGE (kept as-is) -->
   <section class="image-break"></section>
 
   <!-- CONTACT -->
