--- a/index.html
+++ b/index.html
@@ -30,37 +30,62 @@
     </p>
   </section>
 
-  <!-- GREEN PHOTO (full-bleed, same format as other photos) -->
-  <section class="image-break green"></section>
+  <!-- SPLIT: Portrait (left) + Teaching Info Accordion (right) -->
+  <section class="section-content split">
+    <div class="split-left">
+      <figure class="portrait">
+        <img src="img/green.webp" alt="Chris Bates portrait" />
+      </figure>
+    </div>
+    <div class="split-right">
+      <h2>Teaching Info</h2>
 
-  <!-- TEACHING INFO -->
-  <section id="teaching-info" class="section-content">
-    <h2>Teaching Info</h2>
-    <div class="teaching-grid">
-      <article class="card" tabindex="0">
-        <h3>Singers</h3>
-        <p>
-          For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
-          and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
-          breath control, placement, vocal execution, etc.
-        </p>
-      </article>
-      <article class="card" tabindex="0">
-        <h3>Guitarists</h3>
-        <p>
-          For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
-          and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
-          and how you can start to hear them without needing chord charts.
-        </p>
-      </article>
-      <article class="card" tabindex="0">
-        <h3>Songwriters</h3>
-        <p>
-          For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
-          and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
-          Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
-        </p>
-      </article>
+      <div class="accordion" id="teaching-accordion">
+        <!-- Singers -->
+        <div class="acc-item">
+          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-singers" id="tab-singers">
+            Singers
+            <span class="chev" aria-hidden="true">▸</span>
+          </button>
+          <div class="acc-panel" id="panel-singers" role="region" aria-labelledby="tab-singers">
+            <p>
+              For my singers, we’ll firstly assess where you’re at, your strengths/weaknesses, and we’ll figure out together an appropriate plan
+              and practice regiment that will get you starting to sing your ideal songs! My curriculum covers the essentials –
+              breath control, placement, vocal execution, etc.
+            </p>
+          </div>
+        </div>
+
+        <!-- Guitarists -->
+        <div class="acc-item">
+          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-guitar" id="tab-guitar">
+            Guitarists
+            <span class="chev" aria-hidden="true">▸</span>
+          </button>
+          <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
+            <p>
+              For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
+              and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
+              and how you can start to hear them without needing chord charts.
+            </p>
+          </div>
+        </div>
+
+        <!-- Songwriters -->
+        <div class="acc-item">
+          <button class="acc-trigger" aria-expanded="false" aria-controls="panel-writers" id="tab-writers">
+            Songwriters
+            <span class="chev" aria-hidden="true">▸</span>
+          </button>
+          <div class="acc-panel" id="panel-writers" role="region" aria-labelledby="tab-writers">
+            <p>
+              For budding songwriters, this is always fun, we’ll talk about how to come up with your own chords progressions,
+              and strong lyrics to match. We’ll listen to pop artists and try to break down their hit songs and see where the magic comes from.
+              Ultimately, through your own songs, we’ll try to get you expressing yourself – which is what singing/making music is all about.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -87,5 +112,36 @@
     </ul>
   </section>
 
+  <!-- Minimal JS for accordion -->
+  <script>
+    const triggers = document.querySelectorAll('.acc-trigger');
+    triggers.forEach(btn => {
+      btn.addEventListener('click', () => {
+        const expanded = btn.getAttribute('aria-expanded') === 'true';
+        // close others
+        triggers.forEach(b => {
+          b.setAttribute('aria-expanded', 'false');
+          b.parentElement.querySelector('.acc-panel').style.maxHeight = null;
+          b.parentElement.querySelector('.chev').style.transform = 'rotate(0deg)';
+        });
+        // toggle this one
+        if (!expanded) {
+          btn.setAttribute('aria-expanded', 'true');
+          const panel = btn.parentElement.querySelector('.acc-panel');
+          panel.style.maxHeight = panel.scrollHeight + 'px';
+          btn.parentElement.querySelector('.chev').style.transform = 'rotate(90deg)';
+        }
+      });
+    });
+    // open first by default (optional)
+    if (triggers[0]) triggers[0].click();
+    // recompute on resize for smoother transitions
+    window.addEventListener('resize', () => {
+      document.querySelectorAll('.acc-trigger[aria-expanded="true"]').forEach(btn => {
+        const panel = btn.parentElement.querySelector('.acc-panel');
+        panel.style.maxHeight = panel.scrollHeight + 'px';
+      });
+    });
+  </script>
 </body>
 </html>
