--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </button>
         <div class="acc-panel" id="panel-guitar" role="region" aria-labelledby="tab-guitar">
           <p>
-            For my guitarists, a similar approach, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
+            For my guitarists, we’ll see where you’re at, I’ll help you with chords, strumming, fingerpicking,
             and general guidance on playing songs on guitar. For more advanced guitarists we’ll talk about how chords work,
             and how you can start to hear them without needing chord charts.
           </p>
